--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "numpy>=2.3.2",
     "pandas>=2.3.2",
+    "plotly>=6.3.0",
     "scipy>=1.16.1",
     "streamlit>=1.49.1",
 ]
